parlassets/scss/_todo.scss
/* ... */
@media (max-width: 991px) {
  #votingCardHorizontal {

    #scrollbar-voting-card-horizontal {
      position: relative;
    }

    .slider {
      //width: 318px;
      width: 291px;
      padding: 0 1px;

      div.member {
        margin: 0 14px;
      }
    }

  }
}

@media (max-width: 500px) {
  #scrollbar-voting-card-horizontal {
  }

  #votingCardHorizontal {
    .slider {
      width: 100%;
      padding: 0;
      float: none;
      overflow: auto;
      padding-bottom: 20px;
    }

    .navigate-left, .navigate-right {
      display: none;
    }
  }

}

.clearfix {
  clear: both;
}

#votingCard {
  color: $black;

  #scrollbar-voting-card {
    position: relative;
    width: 100%;
    height: 100%;
  }

  .no-border {
    border-bottom: 0 !important;
  }

  div.member {
    border-bottom: 1px solid $border-light;
    padding: 10px 0;
    position: relative;

    .image {
      width: 75px;
      height: 75px;
      -webkit-border-radius: 50px;
      -moz-border-radius: 50px;
      border-radius: 50px;
      background-position: center center;
      background-size: 150px;
      float: left;
    }

    p {
      margin: 12px 0 0 30px;
      //width: 210px;
      float: left;
      font-size: 18px;
      font-weight: 300;
    }

    span {
      float: right;
      font-size: 36px;
      font-weight: 400;
      margin: 13px 0 0 0;
    }

  }

}

@media (max-width: 500px) {
  #votingCard {

    #scrollbar-voting-card {
      position: relative;
      width: 100%;
      height: 100%;
    }

    div.member {

      p {
        width: 100px;
      }

      span {
        font-size: 30px;
        margin: 14px 0 0 0;
      }
    }
  }
}

.recent-activity {
  color: $black;

  #scrollbar-recent-activity {
    position: relative;
    width: 100%;
    height: 100%;
  }

  section {
    clear: both;
    position: relative;

    span.date {
      width: 50px;
      font-size: 16px;
      font-weight: 400;
      float: left;
      margin: 20px 0 0 0;
    }

    ul {
      margin: 0 20px 0 0;
      list-style-type: none;
      float: left;
      border-top: 1px solid $border-light;
      padding: 0 15px 0 0;
      width: calc(100% - 70px);

      li:first-child {
        margin: 20px 0 30px 0;
      }

      li:last-child {
        margin: 30px 0 20px 0;
      }

      li {
        margin: 30px 0 30px 0;
        position: relative;

        span {
          margin: 0;
          width: 50px;
          text-align: center;
          display: inline-block;
          position: absolute;
          top: 2px;
          font-size: 25px;
        }

        p {
          display: inline-block;

          font-size: 16px;
          font-weight: 300;
          margin: 0 0 0 65px;

          a {
            font-weight: 400;
          }
        }

      }
    }

  }

}

.col50 {
  /*width: 50px;*/
  width: 11.6%;
  float: left;
}

.col150 {
  /*width: 150px;*/
  width: 34.9%;
  float: left;
}

.col100 {
  /*width: 100px;*/
  width: 23.2%;
  float: left;
}

.col180 {
  /*width: 170px;*/
  width: 41.8%;
  float: left;
}

.col280 {
  /*width: 280px;*/
  width: 65.1%;
  float: left;
}

.col300 {
  /*width: 300px;*/
  width: 69.7%;
  float: left;
}

.nopadding {
  padding: 0;
}

.bgwhite {
  background: $white;
}

.me_poslanec {
  padding-bottom: 30px;
}

.me_poslanec .poslanec_title {
  font-size: 18px;
  font-weight: 500;
}

.other_poslanec {
  padding-bottom: 30px;
}

.other_poslanec .poslanec_title {
  font-size: 18px;
  font-weight: 300;
}

.progress {
  border: none;
  box-shadow: none;
  background: none;
  border-radius: 0;
  margin-bottom: 0;
}

.progress-bar {
  border: none;
  box-shadow: none;
  border-radius: 0;
}

.progress.hugebar {
  height: 40px;
}

.progress.hugebar .red {
  background: $red;
}

.progress.smallbar .funblue {
  background: $funblue;
}

.me_poslanec .progress_number {
  font-size: 30px;
  line-height: 30px;
}

.other_poslanec .avgmin {
}

.other_poslanec .progress_number {
  font-size: 20px;
  line-height: 20px;
}

.avgminmin {
}

.avgminimg {
  float: left;
  position: relative;
  left: -5px;
}

.avgminimg img {
}

.other_poslanec .img-circle {
  width: 30px;
}

.progress.avgminmin {
  height: 32px;
}

.avgminmin .progress-bar {
  margin-top: 6px;
  height: 20px;
}

.avgminmin .progress_number {
  padding-top: 5px;
}

.progress_number {
  display: inline-block;
  padding-left: 10px;
}

.poslanec .nav-tabs {
  border-bottom: none;
  padding-bottom: 40px;
}

.poslanec .nav-tabs > li {
  width: 25%;
  text-align: center;
}

.poslanec .nav > li > a {
  padding: 10px 7px;
  margin: 0 1px 0 0;
  border: none;

}

.poslanec .nav > li > a:hover {
  border: none;
}

.poslanec .nav-tabs > li > a {
  border-radius: 0;
  border: none;
  color: $black;
  background: $grey;
}

.poslanec .nav-tabs > li.active > a {
  color: $white;
  background: $funblue;
  border: none;
}

.poslanec .tab-content .poslanec_title {
  font-size: 16px;
}

.poslanec .tab-content .me_poslanec {
  padding-bottom: 40px;
}

.poslanec .tab-content .other_poslanec {
  padding-bottom: 40px;
}

.poslanec .row {
}

.poslanec .bordertop {
  border-top: 1px solid #f0f0f0;
}

.poslanec .key {
  display: inline-block;
  font-size: 16px;
  padding: 10px 0;
  color: #505050;
  width: 88%;
}

.poslanec a {
  color: $sadblue;
}

.poslanec .glyphicon {
}

.poslanec .value {
}

.noborder {
  border: none;
}

.poslanec .getListFriendlyBodies {
  font-size: 16px;
}

.poslanec .getListFriendlyBodies .tab-pane {
  padding: 10px 0;
  text-align: center;
}

.poslanec .getListFriendlyBodies .nav-tabs {
  border: none;
  text-align: center;
}

.poslanec .getListFriendlyBodies .nav-tabs li {
  display: inline-block;
  float: none;
  margin: 0;
  text-align: center;
}

.poslanec .getListFriendlyBodies .nav-tabs li a {
  border: medium none;
  border-radius: 0;
  padding: 5px;
  color: $funblue;
  font-size: 40px;
  line-height: 20px;
}

.poslanec .getListFriendlyBodies .nav-tabs li.active a {
  color: $red;
}
/* ... */

